@@ -1,3 +1,10 @@
+Fri Jan  4 22:15:20 UTC 2013  Adam Mitz  <mitza@ociweb.com>
+
+        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:
+        * tests/transport/error_handling/main.cpp:
+
+          Fixed issues with intermittent test failures.
+
 Fri Jan  4 22:12:33 UTC 2013  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/transport/framework/TransportImpl.cpp:
